--- a/Les_transparent/Python01.tex
+++ b/Les_transparent/Python01.tex
@@ -3,6 +3,7 @@
 \documentclass{transp_java}
 \usepackage{etex}
 \usepackage{listings}
+\usepackage{ulem}
 %\usepackage[font=Times,timeinterval=1, timeduration=2.0, timedeath=0, fillcolorwarningsecond=white!60!yellow,
 %timewarningfirst=50,timewarningsecond=80,resetatpages=2]{tdclock}
 
@@ -10,7 +11,7 @@
 \author{Abdelmalek TOUMI\\ 
 toumiab@ensta-bretagne.fr}
 %\date[DLT 2003]{Developments in Language Theory Conference, 2003}
-\date{2019/2020}
+\date{2020/2021}
 \institute{ENSTA Bretagne}
 %\newcommand{\chrono}{\hfill \toggleclock{\beamerbutton{toggle}}\color{red}\tdtime\resetcrono{\beamerbutton{reset}}}
 
