--- a/Les_transparent/corps/fichier.tex
+++ b/Les_transparent/corps/fichier.tex
@@ -376,7 +376,7 @@ nombre invalide}
 	
 	\begin{itemize}
 		\item \emph{r} : ouverture en lecture (read)
-		\item \emph{w} : ouverture en écriture (write), le fichier est écrasé, si il n'existe pas, alors il est crée.
+		\item \emph{w} : ouverture en écriture (write), le fichier est écrasé, s'il n'existe pas, alors il est crée.
 		\item \emph{a} : ouverture en écriture en mode ajout (append), les données sont ajoutées à la suite du fichier.
 	\end{itemize}
 	\end{block}
@@ -393,6 +393,7 @@ nombre invalide}
     %\end{semiverbatim}
   %\end{exemple}}
 
+\end{frame}
 \end{frame}
 
 
