--- a/Les_transparent/corps/intro.tex
+++ b/Les_transparent/corps/intro.tex
@@ -4,7 +4,7 @@
   \frametitle{Déroulement}%\chrono}
 	\initclock  % This must be used one time to initialize the clock
   \begin{itemize}
-	\item Intro linux
+	\item \sout{Intro linux} 2 séances SI pour configurer votre machine
   \item Les bases de Python + Introduction à la POO
   \item UE 2.1 : POO objet et suite de l'algorithmique 
   \item $\longrightarrow$ UE2.4 : Projet informatique : deux parties (sans et avec une interface graphique)
@@ -497,7 +497,7 @@
 			  \item<1,2>Écriture du programme Python (éditeur de texte) dans un fichier portant l'extension \emph{.py}
 				\item<2> Exécution 
 				\item<2> \$ \texttt{\textcolor[rgb]{0,0,1}{python monprogramme.py}  \# pour windows}
-				\item<2> \$ \texttt{\textcolor[rgb]{0,0,1}{python3.6 monprogramme.py}  \# pour linux}
+				\item<2> \$ \texttt{\textcolor[rgb]{0,0,1}{python3.7 monprogramme.py}  \# pour linux}
       \end{itemize}
     \end{itemize}
 		%\only<2>{
@@ -536,13 +536,13 @@
    \item Sous Windows, Python n'est pas installé par défaut. \pause
 	 \item Sous GNU/Linux et Mac OS X, Python et la librairie standard sont intégrés \pause
 	 \begin{itemize}
-				 \item depuis Ubuntu 16.XX on dispose en parallèle de Pyhon v2 et v3.6
+				 \item depuis Ubuntu 20.XX on dispose en parallèle de Pyhon v2 et v3.7
 				 \item Mac OS X 10.8, 10.9 et 10.10, Apple propose que Python 2.7
 				\pause
 		\end{itemize}
 	  \item Installation : 
 	 	 \begin{itemize}
-		 \item Windows : \emph{WinPython 3.6.1.0Qt5} distribution spécifique à Windows et très facile à mettre en \oe uvre. Il intègre notamment : IPython, Spyder, NumPy, SciPy, MatplotLib, Pandas, SymPy, PIP... 
+		 \item Windows : \emph{WinPython 3.7.1.6Qt5} distribution spécifique à Windows et très facile à mettre en \oe uvre. Il intègre notamment : IPython, Spyder, NumPy, SciPy, MatplotLib, Pandas, SymPy, PIP... 
 		 \item $+\longrightarrow$  {\small\url{http://www.lfd.uci.edu/~gohlke/pythonlibs/}}
 		\pause
 		\item GNU/Linux Ubuntu $\geq$ 16.04 : installation standard via les dépôts officiels Ubuntu de Canonical
