--- a/Les_transparent/corps/principes_gen.tex
+++ b/Les_transparent/corps/principes_gen.tex
@@ -61,6 +61,7 @@
   \item Noms de variables sensibles à la casse
   \end{itemize}
   \begin{exemple}
+	\vspace{-0.5cm}
   \begin{lstlisting}[frame=none]
 	>>> a = 42
 	>>> b = 33.5
