--- a/Les_transparent/corps/recursivite.tex
+++ b/Les_transparent/corps/recursivite.tex
@@ -3,8 +3,8 @@
 \subsection{Paramètres formels/paramètres effectifs}
 
 \begin{frame}
-  \frametitle{Fonction fact\chrono}
-	%\initclock
+  \frametitle{Fonction fact}%\chrono}
+
   \begin{itemize}[<+-|alert@+>]
   \item Paramètres formels
   \item Paramètres effectifs
@@ -33,7 +33,7 @@
   
 	\begin{remarques}
 	\begin{itemize}[<+->]
-		\item Les variables globales sont visibles dans les fonctions appelées mais on ne peut les réaffectées
+		\item Les variables globales sont visibles dans les fonctions appelées mais on ne peut les réaffecter
 		\item Le contenu d'une variable globale est modifiable si elle est mutable (modifiable).
 		\item Les variables locales d'une fonction ne sont pas visibles dans les niveaux supérieurs
 		\item Les fonctions peuvent modifier des variables globales (les types non modifiables)  avec l'instruction \emph{global} 
@@ -834,4 +834,4 @@ post-traitement de n : 5}}
   %\item Installation / utilisation : voir didacticiels sur \emph{moodle}
   %\end{itemize}
 %\end{frame}
-\section{Un mot sur le projet "LCLC"}
+%\section{Un mot sur le projet "LCLC"}
