--- a/Les_transparent/python05.tex
+++ b/Les_transparent/python05.tex
@@ -1,11 +1,12 @@
 \makeatletter\def\input@path{{images/}{styles/}{corps/}{bib/}}\makeatother
 
 \documentclass{transp_java}
-\usepackage{etex}
+%\usepackage{etex}
+\usepackage{ifpdf}
 \title[UE 1.1 : Intro. \`{a} la programmation - Python 3]{CM6. R\'ecursivit\'e}
 \author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
-%\date[05/04/2015]{Toumi A. Malek.  Python 3.4}
-\date{2019/2020}
+
+\date{2021/2022}
 \institute{ENSTA Bretagne}
 
 
