--- a/Les_transparent/Python7_TAD.tex
+++ b/Les_transparent/Python7_TAD.tex
@@ -5,7 +5,7 @@
 \title[UE 1.1 : Introduction \`{a} la programmation - Python 3]{UE 1.1 : Introduction \`{a} la programmation \\ CR7. Type Abstrait de Données (TAD)}
 \author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
 %\date[05/04/2015]{Toumi A. Malek.  Python 3.4}
-\date{2019/2020}
+\date{2021/2022}
 \institute{ENSTA Bretagne}
 
 
@@ -36,13 +36,13 @@
   \end{frame}
 }
 
-\AtBeginSubsection[]
-{
-  \begin{frame}<beamer>
-    \frametitle{Sommaire}
-    \tableofcontents[current,currentsubsection]
-  \end{frame}
-}
+%\AtBeginSubsection[]
+%{
+  %\begin{frame}<beamer>
+    %\frametitle{Sommaire}
+    %\tableofcontents[current,currentsubsection]
+  %\end{frame}
+%}
 
 \newlength\dunder
 \settowidth{\dunder}{\_}
